# obi-benchmarking

./: .env.example  .gitattributes  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  evaluator.py  main.py  metrics.py  models.py  problems.json  prompts.py  pyproject.toml  requirements.txt  setup.sh
experimento_2/: README.md  main.py  pyproject.toml
experimento_2/core/: config.py  orchestrator.py
experimento_2/database/: README.md
experimento_2/database/Alfabeto Alienígena/: problem.json
experimento_2/database/Brigadeiros/: problem.json
experimento_2/database/Burocracia/: problem.json
experimento_2/database/Concatena Dígitos/: problem.json
experimento_2/database/Concurso/: problem.json
experimento_2/database/Construtora/: problem.json
experimento_2/database/Cubo Preto/: problem.json
experimento_2/database/Jogo da vida/: problem.json
experimento_2/database/Jogo de Pratos/: problem.json
experimento_2/database/Jogo do Poder/: problem.json
experimento_2/database/Ogro/: problem.json
experimento_2/database/Relógio/: problem.json
experimento_2/database/Retas/: problem.json
experimento_2/metrics/: model_metrics.ipynb
experimento_2/models/: __ini__.py
experimento_2/output/results/: level_to_questions_gemini-3.1-pro-preview.csv  results_gemini-3.1-pro-preview_cpp_few.csv  results_gemini-3.1-pro-preview_python_few.csv  results_gpt-5.4-2026-03-05_cpp_few.csv  results_gpt-5.4-2026-03-05_python_zero.csv
experimento_2/prompts/: __init__.py  few_shot.py
experimento_2/services/: __init__.py  judge_service.py  llm_service.py
(+11748 files in other folders)
