[project]
name = "obi-llm-evaluator"
version = "0.1.0"
description = "OBI LLM Evaluation Framework - Testing different LLM models on OBI programming problems"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "pydantic-settings",
    "openai",
    "pandas",
    "numpy",
    "ipython",
    "jupyter",
    "notebook",
    "python-dotenv",
]
